[tool.poetry]
name = "checkblogmembers"
version = "0.1.0"
description = ""
authors = ["Um Chnagyong <e7217@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
